Initial plugin, with a single step to check if a port is open.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,21 @@
 # Version of the plugin
-pluginVersion=1
+pluginVersion=2
 # Path in the Design Pallet to install this plugin
-pluginTag=Folder/Path/Name
+pluginTag=Utilities/Network/Port Checker
 # Name of the plugin
-pluginName=template
+pluginName=Port Checker
 # unique id of the plugin
-pluginId=ucd-template
+pluginId=portChecker
 # type Automation/Source
 pluginType=Automation
 # Describe the plugin
-pluginDescription=Sample Plugin Template
+pluginDescription=Utility for checking if a port is listening or not.
 # keywords for *.xml files
-pluginKeywords=type,name,keywords
+pluginKeywords=network,tcp
 
 # Information about you as the author
-authorName=You
-authorOrganization=Yours
-authorEmail=email@mail.u
-authorWebSite=http://www.about.u/author
-authorBio=All About you
+authorName=Sean G Wilbur
+authorOrganization=
+authorEmail=sgwilbur@gmail.com
+authorWebSite=http://www.about.u/sgwilbur
+authorBio=
